--- a/index.html
+++ b/index.html
@@ -1,116 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>For Aki 💌</title>
+  <title>My Letter</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: #001f3f;
-      overflow: hidden;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(120deg, #a0d8ff, #cce6ff);
+      padding: 20px;
+      line-height: 1.8;
+      text-align: center;
+      overflow-x: hidden;
     }
     .intro, .letter {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      color: white;
-    }
-    .intro {
-      background: #003366;
-      text-align: center;
-    }
-    .intro h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-    .intro button {
-      padding: 12px 25px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      background: #3399ff;
-      color: white;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    .intro button:hover {
-      background: #1a75ff;
+      max-width: 600px;
+      margin: 80px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeIn 1s forwards;
     }
     .letter {
       display: none;
-      background: rgba(255,255,255,0.9);
-      color: #333;
-      padding: 30px;
-      border-radius: 20px;
-      max-width: 600px;
-      margin: auto;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
-      text-align: left;
-      line-height: 1.8;
-      z-index: 2;
     }
     h1 {
-      color: #003366;
-      text-align: center;
+      color: #004080;
+      font-size: 28px;
+    }
+    p {
+      font-size: 18px;
+      color: #333;
+    }
+    button {
+      background: #3399ff;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      font-size: 16px;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 15px;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #0073e6;
+      transform: scale(1.05);
     }
 
-    /* Floating hearts */
+    /* Fade-in animation */
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Typing effect */
+    .typing {
+      display: inline-block;
+      border-right: 3px solid #004080;
+      white-space: nowrap;
+      overflow: hidden;
+      animation: typing 3s steps(20), blink 0.6s step-end infinite alternate;
+    }
+
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+    @keyframes blink {
+      50% { border-color: transparent }
+    }
+
+    /* Heart floating animation */
     .heart {
-      position: absolute;
-      color: #66b3ff;
-      font-size: 20px;
-      animation: float 6s infinite;
+      position: fixed;
+      bottom: -20px;
+      font-size: 24px;
+      animation: floatUp 5s linear infinite;
+      color: #ff4da6;
       opacity: 0.7;
     }
-    @keyframes float {
-      0% { transform: translateY(100vh) scale(1); opacity: 0.7; }
-      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+    @keyframes floatUp {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-600px) scale(1.5); opacity: 0; }
     }
   </style>
 </head>
 <body>
-  <!-- Intro screen -->
-  <div class="intro" id="intro">
-    <h1>Hi Aki 💙</h1>
-    <p>I made something special for you...</p>
-    <button onclick="openLetter()">Open My Letter 💌</button>
+  <div class="intro">
+    <h1 class="typing">Hi Aki 💙</h1>
+    <p>I made something special for you... pero click mo muna itong button 😉</p>
+    <button onclick="showLetter()">Open My Letter</button>
   </div>
 
-  <!-- Letter content -->
-  <div class="letter" id="letter">
+  <div class="letter">
     <h1>My Letter for Aki</h1>
-    <p>hi aki, i just want to say thank you for everything, you mean a lot to me and i appreciate having you in my life. I'm sorry sa pagiging pasaway ko minsan and minsan nasasaktan kita, but I hope you know that I love you so much. I love you aki and I miss you so much. Please take care of yourself always, I wish I can kiss and hug you rn 🙁</p>
-    <p>Sincerely,<br>Ikang</p>
+    <p>
+      hi aki, i just want to say thankyou for everything, you mean a lot to me 
+      and i appreciate having you in my life. im sorry sa pagiging pasaway ko minsan 
+      and minsan nasasaktan kita, but i hope you know that i love you so much. 
+      i love you aki and i miss you so much. please take care of yourself always. 
+      i wish i can kiss and hug you rn 🙁
+    </p>
+    <p>Sincerely,<br><b>Ikang 💙</b></p>
   </div>
 
-  <!-- Background music -->
-  <audio id="bgMusic" loop>
-    <source src="https://drive.google.com/uc?export=download&id=1z7MJlPiUgHFcJJrimlCAvTERujcX4LZy" type="audio/mpeg">
+  <audio id="bgmusic" loop>
+    <source src="blue.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
   </audio>
 
   <script>
-    function openLetter() {
-      document.getElementById('intro').style.display = 'none';
-      document.getElementById('letter').style.display = 'block';
-      document.getElementById('bgMusic').play();
+    function showLetter() {
+      document.querySelector('.intro').style.display = 'none';
+      document.querySelector('.letter').style.display = 'block';
+      document.getElementById('bgmusic').play();
+      startHearts();
+    }
 
-      // create floating hearts
+    function startHearts() {
       setInterval(() => {
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
+        let heart = document.createElement("div");
         heart.innerHTML = "💙";
-        heart.style.left = Math.random() * 100 + "vw";
-        heart.style.fontSize = Math.random() * 20 + 15 + "px";
-        heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
+        heart.classList.add("heart");
+        heart.style.left = Math.random() * window.innerWidth + "px";
         document.body.appendChild(heart);
-        setTimeout(() => heart.remove(), 6000);
-      }, 500);
+
+        setTimeout(() => {
+          heart.remove();
+        }, 5000);
+      }, 800);
     }
   </script>
 </body>
