--- a/index.html
+++ b/index.html
@@ -4,81 +4,70 @@
 <meta charset="UTF-8">
 <title>Letter for Aki 💌</title>
 <style>
-  body {
+  html, body {
     margin:0;
     padding:0;
+    width:100%;
+    height:100%;
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(135deg, #cce6ff, #ffe6f2);
-    overflow-x: hidden;
-    text-align: center;
+    overflow:hidden;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
   }
 
   .intro, .letter {
-    max-width: 600px;
-    margin: 100px auto;
-    background: white;
-    padding: 25px;
-    border-radius: 20px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
-    opacity: 0;
+    width:90%;
+    max-width:800px;
+    height:90%;
+    background:white;
+    padding:40px;
+    border-radius:25px;
+    box-shadow:0 0 25px rgba(0,0,0,0.2);
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    opacity:0;
     animation: fadeIn 1s forwards;
   }
-  .letter { display: none; }
 
-  h1 { color: #004080; font-size: 28px; }
-  p { font-size: 18px; color: #333; }
+  .letter { display:none; }
+
+  h1 { color:#004080; font-size:36px; margin-bottom:20px; }
+  p { font-size:22px; color:#333; line-height:1.6; }
 
   button {
-    background: #ff6699;
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    font-size: 16px;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 15px;
-    transition: 0.3s;
+    background:#ff6699;
+    color:white;
+    border:none;
+    padding:18px 30px;
+    font-size:20px;
+    border-radius:15px;
+    cursor:pointer;
+    margin-top:30px;
+    transition:0.3s;
   }
-  button:hover { transform: scale(1.05); }
+  button:hover { transform:scale(1.05); }
 
-  /* fade in animation */
   @keyframes fadeIn { to {opacity:1;} }
 
-  /* hearts & kisses */
+  /* floating hearts & kisses */
   .emoji {
-    position: fixed;
-    font-size: 24px;
+    position:fixed;
+    font-size:32px;
     animation: floatUp 6s linear infinite;
-    opacity: 0.7;
+    opacity:0.7;
   }
   @keyframes floatUp {
-    0% {transform: translateY(0) scale(1); opacity:1;}
-    100% {transform: translateY(-600px) scale(1.5); opacity:0;}
+    0% {transform:translateY(0) scale(1); opacity:1;}
+    100% {transform:translateY(-700px) scale(1.5); opacity:0;}
   }
 
-  /* envelope animation */
-  .envelope {
-    font-size: 80px;
-    margin-bottom: 20px;
-    animation: pulse 2s infinite;
-  }
-  @keyframes pulse {
-    0% {transform: scale(1);}
-    50% {transform: scale(1.1);}
-    100% {transform: scale(1);}
-  }
-
-  /* typing effect for intro text */
-  .typing {
-    display: inline-block;
-    border-right: 3px solid #004080;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typing 3s steps(20), blink 0.6s step-end infinite alternate;
-  }
-  @keyframes typing { from {width:0;} to {width:100%;} }
-  @keyframes blink { 50% {border-color: transparent;} }
-
+  /* envelope */
+  .envelope { font-size:120px; margin-bottom:30px; }
 </style>
 </head>
 <body>
@@ -86,11 +75,11 @@
 <!-- Intro screen -->
 <div class="intro" id="intro">
   <div class="envelope">✉️</div>
-  <h1 class="typing">I love you so much, Aki 💖</h1>
+  <h1>I love you so much, Aki 💖</h1>
   <button onclick="openLetter()">Open Envelope</button>
 </div>
 
-<!-- Letter content -->
+<!-- Letter screen -->
 <div class="letter" id="letter">
   <h1>My Letter for Aki</h1>
   <p>
@@ -109,41 +98,29 @@
   Your browser does not support the audio element.
 </audio>
 
-<!-- Optional big visible music icon -->
-<div id="musicBtn" style="font-size:50px; cursor:pointer; margin-top:20px; display:none;">🎵💙</div>
-
 <script>
 function openLetter() {
-  document.getElementById('intro').style.display = 'none';
-  document.getElementById('letter').style.display = 'block';
-  const music = document.getElementById('bgmusic');
-  music.volume = 1.0;
-  music.play();
-  document.getElementById('musicBtn').style.display = 'block';
+  document.getElementById('intro').style.display='none';
+  const letter = document.getElementById('letter');
+  letter.style.display='flex';
+  document.getElementById('bgmusic').volume = 1.0;
+  document.getElementById('bgmusic').play();
   startEmojis();
 }
 
-// Floating hearts & kisses
+// floating hearts & kisses
 function startEmojis() {
-  setInterval(() => {
+  setInterval(()=>{
     let emoji = document.createElement('div');
     emoji.classList.add('emoji');
-    emoji.innerHTML = Math.random() > 0.5 ? "💙" : "💋";
-    emoji.style.left = Math.random() * window.innerWidth + "px";
-    emoji.style.fontSize = (Math.random() * 20 + 20) + "px";
+    emoji.innerHTML = Math.random()>0.5 ? "💙" : "💋";
+    emoji.style.left = Math.random()*window.innerWidth+"px";
+    emoji.style.fontSize=(Math.random()*30+20)+"px";
     document.body.appendChild(emoji);
-    setTimeout(() => emoji.remove(), 6000);
-  }, 500);
+    setTimeout(()=>emoji.remove(),6000);
+  },500);
 }
-
-// Optional play/pause button
-const musicBtn = document.getElementById('musicBtn');
-musicBtn.addEventListener('click', () => {
-  const music = document.getElementById('bgmusic');
-  if(music.paused){ music.play(); musicBtn.style.opacity = 0.5; }
-  else { music.pause(); musicBtn.style.opacity = 1; }
-});
 </script>
 
 </body>
-</html>    
+</html>
